<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/backgroud_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/color_white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onRadioButtonClicked"
            android:text="@string/color_white" />

        <RadioButton
            android:id="@+id/color_red"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onRadioButtonClicked"
            android:text="@string/color_red" />

        <RadioButton
            android:id="@+id/color_green"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onRadioButtonClicked"
            android:text="@string/color_green" />

        <RadioButton
            android:id="@+id/color_blue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onRadioButtonClicked"
            android:text="@string/color_blue" />

        <RadioButton
            android:id="@+id/color_yellow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onRadioButtonClicked"
            android:text="@string/color_yellow" />

        <RadioButton
            android:id="@+id/color_cyan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onRadioButtonClicked"
            android:text="@string/color_cyan" />
    </RadioGroup>
    
</androidx.constraintlayout.widget.ConstraintLayout>