<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/group_12"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/image_student_1"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/diogo_frazao_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group"
        app:srcCompat="@drawable/df" />

    <TextView
        android:id="@+id/student_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diogo_frazao"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_student_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_student_1"
        app:layout_constraintTop_toTopOf="@+id/image_student_1" />

    <ImageView
        android:id="@+id/image_student_2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/filipe_bastias_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_student_1"
        app:srcCompat="@drawable/fb" />

    <TextView
        android:id="@+id/student_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filipe_bastias"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_student_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toEndOf="@+id/image_student_2"
        app:layout_constraintTop_toTopOf="@+id/image_student_2" />

    <ImageView
        android:id="@+id/image_student_3"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/mario_tavares_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_student_2"
        app:srcCompat="@drawable/mt" />

    <TextView
        android:id="@+id/student_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mario_tavares"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_student_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toEndOf="@+id/image_student_3"
        app:layout_constraintTop_toTopOf="@+id/image_student_3" />

    <ImageView
        android:id="@+id/image_student_4"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/radica_giva"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_student_3"
        app:layout_constraintVertical_bias="0.009"
        app:srcCompat="@drawable/rg" />

    <TextView
        android:id="@+id/student_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radica_giva"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_student_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_student_4"
        app:layout_constraintTop_toTopOf="@+id/image_student_4" />

</androidx.constraintlayout.widget.ConstraintLayout>